--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
 									<div>
 										<div class="inner">
 											<h3>Обучение с нуля</h3>
-											<p>Заниматься может любой желающий, даже если у вас нет спортивного прошлого, вне зависимости от возраста и уровня подготовки - занятия в гамаках доступны каждому.</p>
+											<p>Вне зависимости от возраста и уровня подготовки - тренировки доступны каждому.</p>
 											<a href="https://wa.me/message/XWCALI2EXWMJE1" class="cllback_btn_circle_2" target="_blanck"></a>
 										</div>
 									</div>
@@ -346,8 +346,8 @@
 				<div class="articles">
 					<div class="article animate fadeInUp">
 						<div>
-							<a target="_blank" href="https://youtu.be/rlJIJROdqIw" data-fancybox="video-gallery_1" class="article_img_box">
-								<img src="img/article_01.jpg" alt="" />
+							<a target="_blank" href="https://youtu.be/rlJIJROdqIw" data-fancybox="video-gallery_1" class="article_img_box" style="background-image: url(img/article_01.jpg)">
+								<!-- <img src="img/article_01.jpg" alt="" /> -->
 							</a>
 						</div>
 						<div>
@@ -363,8 +363,8 @@
 					</div>
 					<div class="article animate fadeInUp">
 						<div>
-							<a target="_blank" href="https://youtu.be/0RyGpZptMMo" data-fancybox="video-gallery_2" class="article_img_box">
-								<img src="img/article_02.jpg" alt="" />
+							<a target="_blank" href="https://youtu.be/0RyGpZptMMo" data-fancybox="video-gallery_2" class="article_img_box" style="background-image: url(img/article_02.jpg)">
+								<!-- <img src="img/article_02.jpg" alt="" /> -->
 							</a>
 						</div>
 						<div>
@@ -380,8 +380,8 @@
 					</div>
 					<div class="article animate fadeInUp">
 						<div>
-							<a target="_blank" href="https://youtu.be/iUtYZWAIKI8" data-fancybox="video-gallery_3" class="article_img_box">
-								<img src="img/article_03.jpg" alt="" />
+							<a target="_blank" href="https://youtu.be/iUtYZWAIKI8" data-fancybox="video-gallery_3" class="article_img_box" style="background-image: url(img/article_03.jpg)">
+								<!-- <img src="img/article_03.jpg" alt="" /> -->
 							</a>
 						</div>
 						<div>
@@ -397,8 +397,8 @@
 					</div>
 					<div class="article animate fadeInUp">
 						<div>
-							<a target="_blank" href="https://youtu.be/0Lxuw811qr8" data-fancybox="video-gallery_4" class="article_img_box">
-								<img src="img/article_04.jpg" alt="" />
+							<a target="_blank" href="https://youtu.be/0Lxuw811qr8" data-fancybox="video-gallery_4" class="article_img_box" style="background-image: url(img/article_04.jpg)">
+								<!-- <img src="img/article_04.jpg" alt="" /> -->
 							</a>
 						</div>
 						<div>
@@ -414,8 +414,8 @@
 					</div>
 					<div class="article animate fadeInUp">
 						<div>
-							<a target="_blank" href="https://youtu.be/j7T-ZflILWw" data-fancybox="video-gallery_5" class="article_img_box">
-								<img src="img/article_05.jpg" alt="" />
+							<a target="_blank" href="https://youtu.be/j7T-ZflILWw" data-fancybox="video-gallery_5" class="article_img_box" style="background-image: url(img/article_05.jpg)">
+								<!-- <img src="img/article_05.jpg" alt="" /> -->
 							</a>
 						</div>
 						<div>
@@ -741,7 +741,7 @@
 										</div>
 										<div>
 											<div class="author_link_wrapp">
-												<h3>Алёна Балашова</h3>
+												<h3>Александра Серебркова</h3>
 												<!-- <div>
 													<a class="link_2" href="vk.com/yusupovagalina">vk.com/yusupovagalina</a>
 												</div> -->
@@ -770,7 +770,7 @@
 										</div>
 										<div>
 											<div class="author_link_wrapp">
-												<h3>Соня Булгакова</h3>
+												<h3>Ирина Скоробогатова</h3>
 												<!-- <div>
 													<a class="link_2" href="vk.com/yusupovagalina">vk.com/yusupovagalina</a>
 												</div> -->
@@ -799,7 +799,7 @@
 										</div>
 										<div>
 											<div class="author_link_wrapp">
-												<h3>Юлия Булгакова</h3>
+												<h3>Татьяна Совенко</h3>
 												<!-- <div>
 													<a class="link_2" href="vk.com/yusupovagalina">vk.com/yusupovagalina</a>
 												</div> -->
@@ -828,7 +828,7 @@
 										</div>
 										<div>
 											<div class="author_link_wrapp">
-												<h3>​Вика Яппарова</h3>
+												<h3>​Яна  Федотова</h3>
 												<!-- <div>
 													<a class="link_2" href="vk.com/yusupovagalina">vk.com/yusupovagalina</a>
 												</div> -->
@@ -857,7 +857,7 @@
 										</div>
 										<div>
 											<div class="author_link_wrapp">
-												<h3>​​Галина Ульянова</h3>
+												<h3>​​Инна Петрова</h3>
 												<!-- <div>
 													<a class="link_2" href="vk.com/yusupovagalina">vk.com/yusupovagalina</a>
 												</div> -->
@@ -882,16 +882,16 @@
 						</svg>
 						<div class="slider_4">
 							<div>
-								<div class="slide_4" style="background: url(img/slide_3.jpg)"></div>
+								<div class="slide_4" style="background: url(img/lesson_01.jpg)"></div>
 							</div>
 							<div>
-								<div class="slide_4" style="background: url(img/slide_5.jpg)"></div>
+								<div class="slide_4" style="background: url(img/lesson_02.jpg)"></div>
 							</div>
 							<div>
-								<div class="slide_4" style="background: url(img/slide_6.jpg)"></div>
+								<div class="slide_4" style="background: url(img/lesson_03.jpg)"></div>
 							</div>
 							<div>
-								<div class="slide_4" style="background: url(img/slide_7.jpg)"></div>
+								<div class="slide_4" style="background: url(img/lesson_04.jpg)"></div>
 							</div>
 						</div>
 						<div class="slider_4_arrows"></div>
